--- a/app/draft/components/DraftTracker/DraftTracker.module.css
+++ b/app/draft/components/DraftTracker/DraftTracker.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-wrap: nowrap;
+  overflow-x: scroll;
   margin-bottom: 2rem;
   padding: 0.5rem;
   padding: 0.5rem 0.5rem 1.5rem 0.5rem;
